feat: adicionar validações de dominio, tipagem de enum e persistencia em CSV